[package]
name = "ritobin-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
toml = "0.8.19"
fancy-regex = "0.16.2"
league-toolkit = { version = "0.2.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1.41"
parking_lot = "0.12.3"
walkdir = "2.4.0"
itertools = "0.12.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.2", features = ["local-time"] }
colored = "2"
csv = "1.3.1"
time = "0.3.37"
tracing-indicatif = "0.3.13"
directories-next = "2.0"
dirs-next = "2.0"
camino = { version = "1.1", features = ["serde1", "proptest1"] }
convert_case = "0.9.0"
ltk_ritobin = { git = "https://github.com/LeagueToolkit/league-toolkit", rev = "77bf94f0dbb7e396f61348f531989abda296a1ae" }
ltk_meta = { git = "https://github.com/LeagueToolkit/league-toolkit", rev = "77bf94f0dbb7e396f61348f531989abda296a1ae" }
miette = { version = "7.6.0", features = ["fancy"] }
similar = "2.6"
